<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">


    <com.arvis.easybiz.android.view.FontedTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/propose_area"
        android:layout_marginTop="180dp"
        android:id="@+id/txt_location"
        android:layout_centerHorizontal="true"
        android:textColor="@android:color/black"
        android:textSize="20sp"/>

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/selection_area"
        android:spinnerMode="dropdown"
        android:layout_centerInParent="true"
        android:layout_marginTop="16dp"
        android:background="@drawable/square_background"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical">

    <com.arvis.easybiz.android.view.FontedButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/confirm_area_selection"
        android:text="@string/next"/>

        <com.arvis.easybiz.android.view.FontedButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/back_to_type_selection"
            android:text="@string/previous"/>

    </LinearLayout>

</RelativeLayout>