<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">


    <com.arvis.easybiz.android.view.FontedTextView
        android:id="@+id/txt_type_of_biz"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/type_of_biz"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="180dp"
        android:textColor="@android:color/black"
        android:textSize="20sp"/>


    <Spinner
        android:id="@+id/selection_type_of_biz"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginTop="32dp"
        android:background="@drawable/square_background"
        android:spinnerMode="dropdown"
        android:theme="@style/ThemeOverlay.AppCompat.Light" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical">

        <com.arvis.easybiz.android.view.FontedButton
        android:id="@+id/confirm_type_of_biz"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/next"
        android:textColor="@android:color/white" />

    <com.arvis.easybiz.android.view.FontedButton
        android:id="@+id/btn_cancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cancel"
        android:textColor="@android:color/white" />

    </LinearLayout>

</RelativeLayout>