<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <com.arvis.easybiz.android.view.FontedTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/budget"
        android:layout_marginTop="200dp"
        android:id="@+id/txt_budget"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        android:layout_centerHorizontal="true"/>

    <com.arvis.easybiz.android.view.FontedEditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/input_budget"
        android:layout_centerInParent="true"
        android:layout_below="@+id/txt_budget"
        android:layout_marginTop="16dp"
        android:inputType="number"
        android:imeOptions="actionDone"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical">

        <com.arvis.easybiz.android.view.FontedButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/back_to_loc_selection"
            android:text="@string/previous"/>

        <com.arvis.easybiz.android.view.FontedButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/btn_get_biz_location"
            android:text="@string/get_my_location"
            android:textColor="@android:color/white"
            android:background="@color/colorPrimary"/>

    </LinearLayout>

</RelativeLayout>